# c-cpp-playground

./: .gitignore  Makefile.am  README.md  clean.sh  configure.ac
array/: Makefile.am  main.cc  utility.cc  utility.h
c-memory/: Makefile.am  main.c  utility.c  utility.h
cpp-btree/: Makefile.am  main.cpp
src/: main.c
